# herdmentality

./: .dockerignore  .gitignore  Cargo.toml  README.md  Trunk.toml  docker-compose.yml  index.html
crates/bot/: Cargo.toml
crates/bot-provider/: Cargo.toml
crates/bot-provider/src/: main.rs
crates/bot/src/: lib.rs  main.rs  play.rs  provider.rs
crates/core/: Cargo.toml
crates/core/src/: bot.rs  lib.rs  rules.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/proto/: herdcore.proto
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  main.rs  model.rs  repository.rs  service.rs  ws.rs
crates/simsimd-pure/: Cargo.toml
crates/simsimd-pure/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: api.rs  app.rs  lib.rs  names.rs  render.rs  state.rs  views.rs  ws.rs
docker/: Caddyfile  Dockerfile  README.md
