[package]
name = "herdcore-bot-provider"
version.workspace = true
edition.workspace = true

[[bin]]
name = "herdcore-bot-provider"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
herdcore-core = { path = "../core" }
herdcore-protocol = { path = "../protocol", features = ["transport"] }
tokio.workspace = true
tonic = { workspace = true, features = ["transport", "router"] }
uuid.workspace = true
