[package]
name = "herdcore-bot"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "herdcore-bot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
herdcore-core = { path = "../core" }
herdcore-protocol = { path = "../protocol" }
prost.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true
