[package]
name = "herdcore-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
herdcore-core = { path = "../core" }
herdcore-protocol = { path = "../protocol" }
js-sys = "0.3"
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

[dependencies.web-sys]
version = "0.3"
features = [
    "BinaryType",
    "CanvasRenderingContext2d",
    "CloseEvent",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "MessageEvent",
    "Storage",
    "WebSocket",
    "Window",
]
